# concurrent-http-requests-comparison

./: .gitignore  LICENSE  README.md  compose.yaml  crawl.go  crawl.js  crawl.py  go.mod  package-lock.json  package.json  pyproject.toml  settings.json  spider.py
bun/: main.js
bun/fetch/: Dockerfile  main.js  package-lock.json  package.json
csharp/: Dockerfile  csharp.csproj  main.cs
data/: top-1000.txt  top-10000.txt
deno/: Dockerfile  main.js
deno-fetch/: crawl  crawl.js
deno/fetch/: Dockerfile  deps.js  main.js
dotnet/: Dockerfile  main.cs
go/: Dockerfile  main.go
go/http/: Dockerfile  main.go
gocolly/: crawl.go
gohttp/: build  crawl.go
java/: main.java
java/http/: Dockerfile  main.java
kotlin/: Dockerfile  pom.xml
lib/bun/: Dockerfile
lib/dotnet/: main.cs
lib/go/: Dockerfile
lib/java/: .dockerignore  Dockerfile
lib/rust/reqwest/: Cargo.toml  Dockerfile
lib/rust/reqwest/src/: main.rs
node-axios/: crawl  package-lock.json  package.json
node-fetch/: crawl  package.json
node/fetch/: Dockerfile  main.js
node/puppeteer/: Dockerfile  main.js  urls.txt
node/reqwest/: Cargo.toml  Dockerfile  index.d.ts  index.js  main.js  main.mjs  package-lock.json  package.json
node/reqwest/npm/darwin-x64/: README.md  package.json
node/reqwest/npm/linux-x64-gnu/: README.md  package.json
node/reqwest/npm/win32-x64-msvc/: README.md  package.json
node/reqwest/src/: lib.rs
python-aiohttp/: crawl
rust-reqwest/: Cargo.toml  build  crawl.rs
scripts/: Dockerfile  benchmark.js  process-output.js
superagent/: crawl  package-lock.json
(+25 files in other folders)
