[package]
edition = "2021"
name = "reqwest"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16", default-features = false, features = ["full"] }
napi-derive = "2.16"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
