[package]
name = "rust-reqwest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures = "0.3.31"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "run"
path = "src/main.rs"
